# Console-Calculator

./: CMakeLists.txt
src/: InputParser.cpp  InputParser.hpp
tests/: CMakeLists.txt  ExampleTests.cpp  InputParserTest.cpp
